--- a/behavior.html
+++ b/behavior.html
@@ -100,7 +100,7 @@
                     <a class="btn btn-sm btn-primary display-4" href="https://scholar.google.com/citations?user=W8wrWfMAAAAJ&hl=en" target="_blank">
                         <span class="socicon socicon-googlescholar mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span>
                     </a>
-                    <a class="btn btn-sm btn-primary display-4" href="mailto:aoxiang@ict.ac.cn">
+                    <a class="btn btn-sm btn-primary display-4" href="mailto:jiangxinlong@ict.ac.cn">
                         <span class="socicon socicon-mail mbr-iconfont mbr-iconfont-btn"
                             style="font-size: 16px;">
                         </span>
