--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Index of 's homepage">
 
 
-    <title>zhanghao,Homepage</title>
+    <title>Xinlong Jiang,Homepage</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
