修改地图显示

--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
                 <!--Right-->
                 <div class="col-12 col-md-6">
                     <div class="google-map">
-                        <iframe width="504" height="425" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://j.map.baidu.com/s/dY0HFb"></iframe>
+                        <!-- <iframe width="504" height="425" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://j.map.baidu.com/s/dY0HFb"></iframe> -->
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d195939.98256077347!2d116.30346171948246!3d39.88404283905024!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f053fe4ea8f3c3%3A0xd0a4be69ba357fae!2z5Lit5Zu956eR5a2m6Zmi6K6h566X5oqA5pyv56CU56m25omA!5e0!3m2!1szh-CN!2s!4v1618385347749!5m2!1szh-CN!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         <!-- <iframe frameborder="0" style="border:0"
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=中国科学院计算技术研究所"
                             allowfullscreen="">
