添加日历插件

--- a/teach.html
+++ b/teach.html
@@ -67,6 +67,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link link text-black display-4" href="calendar.html">
+                      Calendar
+                    </a>
+                  </li>
+                <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="resch.html">Research</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="pubs.html">Publications</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="teach.html">Teaching</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="stds.html">Students</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://scholar.google.com/citations?user=W8wrWfMAAAAJ&hl=en" target="_blank"><span class="socicon socicon-googlescholar mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span></a> <a class="btn btn-sm btn-primary display-4" href="mailto:jiangxinlong@ict.ac.cn"><span class="socicon socicon-mail mbr-iconfont mbr-iconfont-btn" style="font-size: 16px;"></span></a></div>
