--- a/behavior.html
+++ b/behavior.html
@@ -76,6 +76,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link link text-black display-4" href="calendar.html">
+                          Calendar
+                        </a>
+                      </li>
+                    <li class="nav-item">
                         <a class="nav-link link text-black display-4" href="resch.html">
                             Research
                         </a>
