--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href='./main.css' rel='stylesheet' />
+  
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -16,7 +16,9 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link href='./main.css' rel='stylesheet' />
   <script src='./main.js'></script>
+  
 
 </head>
 
@@ -79,6 +81,7 @@
       </div>
     </nav>
   </section>
+  <div id='loading'>loading...</div>
   <div id='calendar'></div>
 
 </body>
@@ -91,13 +94,20 @@
   document.addEventListener('DOMContentLoaded', function () {
     var calendarEl = document.getElementById('calendar');
     var calendar = new FullCalendar.Calendar(calendarEl, {
+      displayEventTime: false,
+      buttonIcons: true,
       initialDate: new Date(year, month, date),
+      headerToolbar: {
+        left: 'prev,next today',
+        center: 'title',
+        right: ''
+      },
       editable: true,
       selectable: true,
       businessHours: true,
       locale: "zh-cn",
       dayMaxEvents: true, // allow "more" link when too many events
-      events: data
+      events: data,
     });
 
     calendar.render();
@@ -116,6 +126,7 @@
 
   #calendar {
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 40px auto;
+    padding: 0 10px;
   }
 </style>
