--- a/calendar.html
+++ b/calendar.html
@@ -81,44 +81,45 @@
       </div>
     </nav>
   </section>
-  <div id='loading'>loading...</div>
-  <div id='calendar'></div>
+  <!-- <div id='loading'>loading...</div>
+  <div id='calendar'></div> -->
+  <iframe id="frame" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FShanghai&amp;src=amlhbmd4aW5sb25nMjAwOUBnbWFpbC5jb20&amp;src=dWxzcDU4OXViODhub3A3YmR2NzAzazcyY2tAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%233F51B5&amp;color=%23AD1457&amp;mode=WEEK" style="border:solid 1px #777;margin-top: 5%;overflow: hidden;" width="100%" height="800" frameborder="0" scrolling="no"></iframe>
 
 </body>
 <script type="module">
-  import data from './data.js'
-  var now = new Date()
-  var year = now.getFullYear()
-  var month = now.getMonth()
-  var date = now.getDate()
-  document.addEventListener('DOMContentLoaded', function () {
-    var calendarEl = document.getElementById('calendar');
-    var calendar = new FullCalendar.Calendar(calendarEl, {
-      displayEventTime: true,
-      buttonIcons: true,
-      initialDate: new Date(year, month, date),
-      headerToolbar: {
-        left: 'prev,next today',
-        center: 'title',
-        right: 'dayGridMonth,timeGridWeek,timeGridDay,listMonth'
-      },
-      buttonText: {
-        today: '今天',
-        month: '月',
-        week: '周',
-        day: '日',
-        list:'列表'
-    },
-      editable: true,
-      selectable: true,
-      businessHours: true,
-      locale: "zh-cn",
-      dayMaxEvents: true, // allow "more" link when too many events
-      events: data,
-    });
+  // import data from './data.js'
+  // var now = new Date()
+  // var year = now.getFullYear()
+  // var month = now.getMonth()
+  // var date = now.getDate()
+  // document.addEventListener('DOMContentLoaded', function () {
+  //   var calendarEl = document.getElementById('calendar');
+  //   var calendar = new FullCalendar.Calendar(calendarEl, {
+  //     displayEventTime: true,
+  //     buttonIcons: true,
+  //     initialDate: new Date(year, month, date),
+  //     headerToolbar: {
+  //       left: 'prev,next today',
+  //       center: 'title',
+  //       right: 'dayGridMonth,timeGridWeek,timeGridDay,listMonth'
+  //     },
+  //     buttonText: {
+  //       today: '今天',
+  //       month: '月',
+  //       week: '周',
+  //       day: '日',
+  //       list:'列表'
+  //   },
+  //     editable: true,
+  //     selectable: true,
+  //     businessHours: true,
+  //     locale: "zh-cn",
+  //     dayMaxEvents: true, // allow "more" link when too many events
+  //     events: data,
+  //   });
 
-    calendar.render();
-  });
+  //   calendar.render();
+  // });
 
 </script>
 
