--- a/calendar.html
+++ b/calendar.html
@@ -83,7 +83,7 @@
   </section>
   <!-- <div id='loading'>loading...</div>
   <div id='calendar'></div> -->
-  <iframe id="frame" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FShanghai&amp;src=amlhbmd4aW5sb25nMjAwOUBnbWFpbC5jb20&amp;src=dWxzcDU4OXViODhub3A3YmR2NzAzazcyY2tAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%233F51B5&amp;color=%23AD1457&amp;mode=WEEK" style="border:solid 1px #777;margin-top: 5%;overflow: hidden;" width="100%" height="800" frameborder="0" scrolling="no"></iframe>
+  <iframe id="iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FShanghai&amp;src=amlhbmd4aW5sb25nMjAwOUBnbWFpbC5jb20&amp;src=dWxzcDU4OXViODhub3A3YmR2NzAzazcyY2tAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%233F51B5&amp;color=%23D50000&amp;showTitle=0&amp;mode=WEEK" style="border:solid 1px #777;" width="800" frameborder="0" scrolling="no"></iframe>
 
 </body>
 <script type="module">
@@ -120,7 +120,16 @@
 
   //   calendar.render();
   // });
+    function changeFrameHeight(){
+      var ifm= document.getElementById("iframe"); 
+      ifm.height=document.documentElement.clientHeight -150;
 
+    }
+
+    window.onload=function(){  
+        changeFrameHeight();  
+
+    } 
 </script>
 
 </html>
@@ -130,11 +139,18 @@
     padding: 0;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 14px;
+    overflow: hidden;
   }
 
   #calendar {
     max-width: 1100px;
     margin: 40px auto;
     padding: 0 10px;
+  }
+  #iframe{
+    width: 100%;
+    /* overflow: hidden; */
+    margin-top:5%;
+    /* display: inline-block; */
   }
 </style>
