--- a/pubs.html
+++ b/pubs.html
@@ -149,30 +149,64 @@
                 <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                     <ul>
                         <li>
-                            Jiang, Xinlong, Yiqiang Chen, Junfa Liu, Yang Gu, and Lisha Hu. "FSELM: fusion
+                            Hong Shen, Junfa Liu, Yiqiang Chen, <b>Xinlong, Jiang</b>, Zhengyu Huang:
+                            基于多模融合的半监督场景识别方法 (Semi-supervised Scene Recognition Method Based on Multi-mode Fusion). 计算机科学 46(12): 306-312 (2019)
+                        </li>
+                        <li>
+                            Jun Xia, Junfa Liu, <b>Xinlong, Jiang</b>, Yiqiang Chen: 针对设备差异性问题的增量式室内定位方法 
+                            (Incremental Indoor Localization for Device Diversity Issues). 计算机科学 45(10): 69-77 (2018)
+                        </li>
+                        <li>
+                            Xiankai Fu, <b>Xinlong, Jiang</b>, Junfa Liu, Shaobo Zhang, Yiqiang Chen: 基于多维尺度分析的自适应室内群终端定位方法 
+                            (Adaptive Indoor Location Method for Multiple Terminals Based on Multidimensional Scaling). 计算机科学 45(10): 104-110 (2018)
+                        </li>
+                        <li>
+                            Lisha Hu, Yiqiang Chen, Jindong Wang, Chunyu Hu, <b>Xinlong, Jiang</b>: OKRELM: online kernelized and regularized extreme learning machine
+                            for wearable-based activity recognition. Int. J. Mach. Learn. Cybern. 9(9): 1577-1590 (2018)
+                        </li>
+                        <li>
+                            <b>Xinlong, Jiang</b>
+                            , Yiqiang Chen, Junfa Liu, Yang Gu, and Lisha Hu. "FSELM: fusion
                             semi-supervised extreme learning machine for indoor localization with Wi-Fi and Bluetooth
                             fingerprints." Soft Computing 22, no. 11 (2018): 3621-3635
                         </li>
                         <li>
-                            Jiang, Xinlong, Junfa Liu, Yiqiang Chen, Dingjun Liu, Yang Gu, and Zhenyu Chen. "Feature
+                            <b>Xinlong, Jiang</b>, Junfa Liu, Yiqiang Chen, Dingjun Liu, Yang Gu, and Zhenyu Chen. "Feature
                             adaptive online sequential extreme learning machine for lifelong indoor localization."
                             Neural Computing and Applications 27, no. 1 (2016): 215-225.
                         </li>
                         <li>
-                            Jiang Xinlong, Yiqiang Chen,Junfa Liu,Lisha Hu, and Jianfei Shen. "Wearable system for
+                            <b>Xinlong, Jiang</b>, Yiqiang Chen,Junfa Liu,Lisha Hu, and Jianfei Shen. "Wearable system for
                             social distance cognition of autistic patients." Journal of Zhejiang University (Engineering
                             Edition) 51, No. 4 (2017): 637-647
                         </li>
+                        
                         <li>
-                            Jiang Xinlong,Yiqiang Chen, Junfa Liu , Lisha Hu, and Jianfei Shen. "Wearable system for
-                            social distance cognition of autistic patients." Journal of Zhejiang University (Engineering
-                            Edition) 51, No. 4 (2017): 637-647
-                        </li>
-                        <li>
-                            Huang Zhengyu, Jiang Xinlong, Liu Junfa, Chen Yiqiang, and Gu Yang. "Semi supervised
+                            Huang Zhengyu,<b>Xinlong, Jiang</b>, Liu Junfa, Chen Yiqiang, and Gu Yang. "Semi supervised
                             manifold constraint localization method based on fusion features." Journal of Zhejiang
                             University (Engineering Edition) 51, No. 4 (2017): 655-662
                         </li>
+                        <li>
+                            Faizan Ahmad, Yiqiang Chen, Lisha Hu, Shuangquan Wang, Jindong Wang, Zhenyu Chen, <b>Xinlong, Jiang</b>, 
+                            Jianfei Shen: BrainStorm: a psychosocial game suite design for non-invasive cross-generational cognitive 
+                            capabilities data collection. J. Exp. Theor. Artif. Intell. 29(6): 1311-1323 (2017)
+                        </li>
+                        <li>
+                            Dingjun Liu, <b>Xinlong, Jiang</b>, Junfa Liu, Yiqiang Chen: 融合多模传感器的室内实时高精度轨迹生成 
+                            (Multi-sensor Fusion Based Indoor Real-time and Highly Accurate Trajectory Generation). 计算机科学 43(1): 18-21 (2016)
+                        </li>
+                        <li>
+                            <b>Xinlong, Jiang</b>, Junfa Liu, Yiqiang Chen, Dingjun Liu, Yang Gu, Zhenyu Chen: Feature Adaptive Online Sequential Extreme
+                            Learning Machine for lifelong indoor localization. Neural Comput. Appl. 27(1): 215-225 (2016)
+                        </li>
+                        <li>
+                            Yang Gu, Yiqiang Chen, Junfa Liu, <b>Xinlong, Jiang</b>: Semi-supervised deep extreme learning machine for Wi-Fi 
+                            based localization. Neurocomputing 166: 282-293 (2015)
+                        </li>
+                        <li>
+                            Yang Gu, Junfa Liu, Yiqiang Chen, <b>Xinlong, Jiang</b>, Hanchao Yu: TOSELM: Timeliness Online Sequential Extreme Learning Machine. Neurocomputing 128: 119-127 (2014)
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -192,52 +226,81 @@
                 <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                     <ul>
                         <li>
-                            Jiang, Xinlong, Yiqiang Chen, Wuliang Huang, Teng Zhang, Chenlong Gao, Yunbing Xing, and Yi
-                            Zheng. "WeDA: Designing and Evaluating A Scale-driven Wearable Diagnostic Assessment System
-                            for Children with ADHD." In Proceedings of the 2020 CHI Conference on Human Factors in
-                            Computing Systems, pp. 1-12. 2020.
+                            <b>Xinlong, Jiang</b>, Yiqiang Chen, Wuliang Huang, Teng Zhang, Chenlong Gao, Yunbing Xing, 
+                            Yi Zheng: WeDA: Designing and Evaluating A Scale-driven Wearable Diagnostic Assessment System
+                            for Children with ADHD. CHI 2020: 1-12
                         </li>
                         <li>
-                            Jiang, Xinlong, Yunbing Xing, Teng Zhang, Wuliang Huang, Chenlong Gao, and Yiqiang Chen.
-                            "Poster Abstract: A Wearable Diagnostic Assessment System for Attention Deficit
-                            Hyperactivity Disorder." In 2019 IEEE/ACM International Conference on Connected Health:
-                            Applications, Systems and Engineering Technologies (CHASE), pp. 13-14. IEEE, 2019.
+                            <b>Xinlong, Jiang</b>, Yunbing Xing, Teng Zhang, Wuliang Huang, Chenlong Gao, Yiqiang Chen:
+                            Poster Abstract: A Wearable Diagnostic Assessment System for Attention Deficit Hyperactivity Disorder.
+                            CHASE 2019: 13-14
                         </li>
                         <li>
-                            Jiang, Xinlong, Yunbing Xing, Yiqiang Chen, Yang Gu, and Junfa Liu. "Indoor Trajectory
-                            Restoration Method Based on PoI Relation Constraints." In 2019 IEEE SmartWorld, Ubiquitous
-                            Intelligence & Computing, Advanced & Trusted Computing, Scalable Computing & Communications,
-                            Cloud & Big Data Computing, Internet of People and Smart City Innovation
-                            (SmartWorld/SCALCOM/UIC/ATC/CBDCom/IOP/SCI), pp. 439-446. IEEE, 2019.
+                            <b>Xinlong, Jiang</b>, Yunbing Xing, Yiqiang Chen, Yang Gu, Junfa Liu: Indoor Trajectory Restoration Method 
+                            Based on PoI Relation Constraints. SmartWorld/SCALCOM/UIC/ATC/CBDCom/IOP/SCI 2019: 439-446
                         </li>
                         <li>
-                            Jiang, Xinlong, LouAnne E. Boyd, Yiqiang Chen, and Gillian R. Hayes. "ProCom: designing a
-                            mobile and wearable system to support proximity awareness for people with autism." In
-                            Proceedings of the 2016 ACM International Joint Conference on Pervasive and Ubiquitous
-                            Computing: Adjunct, pp. 93-96. 2016.
+                            Yang Gu, Yiqiang Chen, <b>Xinlong, Jiang</b>, Jiwei Wang, Yunlong Xiao, Tong Wu: CoFINLo: Coarse to Fine Indoor
+                            Navigation and Localization System. SmartWorld/SCALCOM/UIC/ATC/CBDCom/IOP/SCI 2019: 447-453
                         </li>
                         <li>
-                            Jiang, Xinlong, Yiqiang Chen, Junfa Liu, Gillian R. Hayes, Lisha Hu, and Jianfei Shen. "AIR:
-                            recognizing activity through IR-based distance sensing on feet." In Proceedings of the 2016
-                            ACM International Joint Conference on Pervasive and Ubiquitous Computing: Adjunct, pp.
-                            97-100. 2016.
+                            Ya Li, Jiying Li, <b>Xinlong, Jiang</b>, Chenlong Gao, Teng Zhang: A Driving Attention Detection Method Based on 
+                            Head Pose. SmartWorld/SCALCOM/UIC/ATC/CBDCom/IOP/SCI 2019: 483-490
                         </li>
                         <li>
-                            Jiang, Xinlong, Yiqiang Chen, Junfa Liu, Yang Gu, Lisha Hu, and Zhiqi Shen. "Heterogeneous
-                            data driven manifold regularization model for fingerprint calibration reduction." In 2016
-                            Intl IEEE Conferences on Ubiquitous Intelligence & Computing, Advanced and Trusted
-                            Computing, Scalable Computing and Communications, Cloud and Big Data Computing, Internet of
-                            People, and Smart World Congress (UIC/ATC/ScalCom/CBDCom/IoP/SmartWorld), pp. 74-81. IEEE
-                            Computer Society, 2016.
+                            Xuejun Zhang, Qian Chen, Xiaohui Peng, <b>Xinlong, Jiang</b>: Differential Privacy-Based Indoor Localization Privacy
+                            Protection in Edge Computing. SmartWorld/SCALCOM/UIC/ATC/CBDCom/IOP/SCI 2019: 491-496
                         </li>
                         <li>
-                            Boyd, LouAnne E., Xinlong Jiang, and Gillian R. Hayes. "ProCom: Designing and evaluating a
-                            mobile and wearable system to support proximity Awareness for People with Autism." In
-                            Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems, pp. 2865-2877.
-                            2017. [8] Chen, Yiqiang, Yang Gu, Xinlong Jiang, and Jindong Wang. "Ocean: A new
-                            opportunistic computing model for wearable activity recognition." In Proceedings of the 2016
-                            ACM International Joint Conference on Pervasive and Ubiquitous Computing: Adjunct, pp.
-                            33-36. 2016.
+                            Yiqiang Chen, Yingwei Zhang, <b>Xinlong, Jiang</b>, Xin Zeng, Ruizhe Sun, Hanchao Yu: COSA: Contextualized and Objective 
+                            System to Support ADHD Diagnosis. BIBM 2018: 1195-1202
+                        </li>
+                        <li>
+                            LouAnne E. Boyd, <b>Xinlong, Jiang</b>, Gillian R. Hayes: ProCom: Designing and Evaluating a Mobile and Wearable System to 
+                            Support Proximity Awareness for People with Autism. CHI 2017: 2865-2877
+                        </li>
+                        <li>
+                            Yuxin Zhang, Yiqiang Chen, Lisha Hu, <b>Xinlong, Jiang</b>, Jianfei Shen: An Effective Deep Learning Approach for Unobtrusive 
+                            Sleep Stage Detection Using Microphone Sensor. ICTAI 2017: 37-44
+                        </li>
+                        <li>
+                            <b>Xinlong, Jiang</b>, Louanne E. Boyd, Yiqiang Chen, Gillian R. Hayes: ProCom: designing a mobile and wearable system to support 
+                            proximity awareness for people with autism. UbiComp Adjunct 2016: 93-96
+                        </li>
+                        <li>
+                            Yiqiang Chen, Yang Gu, <b>Xinlong, Jiang</b>, Jindong Wang: OCEAN: a new opportunistic computing model for 
+                            wearable activity recognition. UbiComp Adjunct 2016: 33-36
+                        </li>
+                        <li>
+                            <b>Xinlong, Jiang</b>, Yiqiang Chen, Junfa Liu, Gillian R. Hayes, Lisha Hu, Jianfei Shen: AIR: recognizing activity 
+                            through IR-based distance sensing on feet. UbiComp Adjunct 2016: 97-100
+                        </li>
+                        <li>
+                            <b>Xinlong, Jiang</b>, Yiqiang Chen, Junfa Liu, Yang Gu, Lisha Hu, Zhiqi Shen: Heterogeneous Data Driven Manifold Regularization Model for 
+                            Fingerprint Calibration Reduction. UIC/ATC/ScalCom/CBDCom/IoP/SmartWorld 2016: 74-81
+                        </li>
+                        <li>
+                            Lisha Hu, Yiqiang Chen, Shuangquan Wang, Jindong Wang, Jianfei Shen, <b>Xinlong, Jiang</b>, Zhiqi Shen: Less Annotation on Personalized Activity
+                             Recognition Using Context Data. UIC/ATC/ScalCom/CBDCom/IoP/SmartWorld 2016: 327-332
+                        </li>
+                        <li>
+                            Yang Gu, Yiqiang Chen, Junfa Liu, <b>Xinlong, Jiang</b>: Online deep intelligence for Wi-Fi indoor localization. UbiComp/ISWC Adjunct 2015: 29-32
+                        </li>
+                        <li>
+                            Zhenyu Chen, Yiqiang Chen, Shuangquan Wang, Lisha Hu, Xingyu Gao, <b>Xinlong, Jiang</b>: Recognizing extended surrounding contexts via
+                             class incremental learning. UbiComp/ISWC Adjunct 2015: 269-272
+                        </li>
+                        <li>
+                            Zhenyu Chen, Yiqiang Chen, Lisha Hu, Shuangquan Wang, <b>Xinlong, Jiang</b>, Xiaojuan Ma, Nicholas D. Lane, Andrew T. Campbell: ContextSense:
+                             unobtrusive discovery of incremental social context using dynamic bluetooth data. UbiComp Adjunct 2014: 23-26
+                        </li>
+                        <li>
+                            Yang Gu, Yiqiang Chen, Junfa Liu, <b>Xinlong, Jiang</b>: SAP dissimilarity based high performance Wi-Fi indoor 
+                            localization. UbiComp Adjunct 2014: 55-58
+                        </li>
+                        <li>
+                            Yang Gu, Junfa Liu, Yiqiang Chen, <b>Xinlong, Jiang</b>: Constraint Online Sequential Extreme Learning Machine
+                             for lifelong indoor localization system. IJCNN 2014: 732-738
                         </li>
                     </ul>
                 </div>
@@ -257,11 +320,11 @@
                 <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                     <ul>
                         <li>
-                            Chen Yiqiang, Daihua Wei, Lisha Hu,Xinlong Jiang. A universal sleep quality assessment
+                            Chen Yiqiang, Daihua Wei, Lisha Hu,<b>Xinlong, Jiang</b>. A universal sleep quality assessment
                             method and system, zl201710277177. X
                         </li>
                         <li>
-                            Chen Yiqiang, Zhenyu Chen,Jianfei Shen, Xinlong Jiang, Lisha Hu, Shuangquan Wang. A fall
+                            Chen Yiqiang, Zhenyu Chen,Jianfei Shen, <b>Xinlong, Jiang</b>, Lisha Hu, Shuangquan Wang. A fall
                             detection model construction method and corresponding fall detection method and device,
                             zl201510751929.2
                         </li>
